# FCG-ISEC

./: CMakeLists.txt  main.cpp
cmake/: Edificio.cpp  Edificio.h  Ilha.cpp  Ilha.h  Interacao.cpp  Interacao.h  Makefile  Recursos.cpp  Recursos.h  Trabalhadores.cpp  Trabalhadores.h  Zona.cpp  Zona.h  cmake_install.cmake  ficheiroteste.txt  trb.cbp  trb.ilk
cmake/Edificios/: Bateria.cpp  Bateria.h  Centraleletrica.cpp  Centraleletrica.h  Edificiox.cpp  Edificiox.h  Fundicao.cpp  Fundicao.h  Minacarvao.cpp  Minacarvao.h  Minaferro.cpp  Minaferro.h
cmake/Recursos/: Aco.cpp  Aco.h  Carvao.cpp  Carvao.h  Eletricidade.cpp  Eletricidade.h  Ferro.cpp  Ferro.h  Madeira.cpp  Madeira.h  VigasMadeira.cpp  VigasMadeira.h
cmake/Trabalhadores/: Lenhador.cpp  Lenhador.h  Mineiro.cpp  Mineiro.h  Operario.cpp  Operario.h
cmake/Zonas/: Deserto.cpp  Deserto.h  Floresta.cpp  Floresta.h  Montanha.cpp  Montanha.h  Pantano.cpp  Pantano.h  Pasto.cpp  Pasto.h  ZonaX.cpp  ZonaX.h
